[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/images/mars.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Actors/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/background.png" type="Texture" id=4]
[ext_resource path="res://src/UI/UI.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Levels/TestLevel.gd" type="Script" id=6]
[ext_resource path="res://src/Resources/RawCrystalManager.tscn" type="PackedScene" id=7]

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 400, 0, 400, 200, 0, 200 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 200, 0, 200, 200, 0, 200 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 400, 0, 400, 200, 0, 200 )

[sub_resource type="TileSet" id=3]
0/name = "mars.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 400, 200 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 4 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="TestLevel" type="Node2D"]
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 960, 720 )

[node name="background" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 960.0
margin_bottom = 720.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArtTiles" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 400, 200 )
cell_custom_transform = Transform2D( 400, 200, 0, 64, 0, 0 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 196608, 536870912, 0, 196609, 536870912, 0, 196610, 536870912, 0, 196611, 536870912, 0, 196612, 536870912, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 1075, 304 )
z_index = 1
collision_mask = 2

[node name="Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 620, 162 )

[node name="Control" parent="." instance=ExtResource( 5 )]

[node name="RawCrystalManager" parent="." instance=ExtResource( 7 )]
[connection signal="building_button_pressed" from="Control" to="." method="_on_Control_building_button_pressed"]
